[project]
name = "beshence-vault"
version = "0.0.1"
description = "Beshence Vault"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi-versionizer",
    "fastapi[standard]>=0.115.12",
    "sqlmodel>=0.0.24",
]

[tool.uv.sources]
fastapi-versionizer = { git = "https://github.com/alexschimpf/fastapi-versionizer/", rev = "8d87636942ad21455af191197cb06fbf5072db15"}
